# cpct2025.github.io

./: 404.html  Makefile  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: static.yml
docs/: README.md
docs/errata/: 5672.md  5673.md  5679.md  5680.md  5682.md  5683.md  5684.md  errata.md
docs/exercise/: 1.md  2.md  3.md  4.md  5.md  6.md  7.md  exercise.md
docs/faq/: FAQ.md  README.md  faq-1.md  faq-2.md  faq-3.md  faq-4.md  faq-5.md
docs/hint/: hint.md
docs/lab0/: CLion.md  Linux.md  git.md  ide_installation.md  linux.md  markdown.md
faq/: index.html
faq/FAQ/: index.html
lab0/git/: index.html
lab0/ide_installation/: index.html
lab0/markdown/: index.html
search/: search_index.json
site/: 404.html  index.html
site/faq/FAQ/: index.html
site/lab0/ide_installation/: index.html
site/lab0/markdown/: index.html
site/search/: search_index.json
