[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple/"
default = true
[tool.uv.pip]
index-url = "https://mirrors.ustc.edu.cn/pypi/simple/"
[project]
name = "cpct2025-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.21",
]
